--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "lodash": "^4.17.21",
     "pdfjs-dist": "^2.6.347",
     "react": "^17.0.2",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
