Search page finished, redux connected on Login page, just create LogIn actions functions and logic for redirecting and LogOut

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-stripe-checkout": "^2.6.3",
+    "react-toastify": "^7.0.4",
     "redux": "^4.1.0",
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
