--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pdfjs-dist": "^2.6.347",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.2",
